seaqt/QtMultimedia/gen_qradiotunercontrol.nim

import ./Qt5Multimedia_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Multimedia")  & " -fPIC"
{.compile("gen_qradiotunercontrol.cpp", cflags).}


import ./gen_qradiotunercontrol_types
export gen_qradiotunercontrol_types

import
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject_types,
  ../QtCore/gen_qobjectdefs_types,
  ./gen_qmediacontrol
export
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types,
  gen_qmediacontrol

type cQRadioTunerControl*{.exportc: "QRadioTunerControl", incompleteStruct.} = object

proc fcQRadioTunerControl_metaObject(self: pointer, ): pointer {.importc: "QRadioTunerControl_metaObject".}
proc fcQRadioTunerControl_metacast(self: pointer, param1: cstring): pointer {.importc: "QRadioTunerControl_metacast".}
proc fcQRadioTunerControl_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QRadioTunerControl_metacall".}
proc fcQRadioTunerControl_tr(s: cstring): struct_miqt_string {.importc: "QRadioTunerControl_tr".}
proc fcQRadioTunerControl_trUtf8(s: cstring): struct_miqt_string {.importc: "QRadioTunerControl_trUtf8".}
proc fcQRadioTunerControl_state(self: pointer, ): cint {.importc: "QRadioTunerControl_state".}
proc fcQRadioTunerControl_band(self: pointer, ): cint {.importc: "QRadioTunerControl_band".}
proc fcQRadioTunerControl_setBand(self: pointer, b: cint): void {.importc: "QRadioTunerControl_setBand".}
proc fcQRadioTunerControl_isBandSupported(self: pointer, b: cint): bool {.importc: "QRadioTunerControl_isBandSupported".}
proc fcQRadioTunerControl_frequency(self: pointer, ): cint {.importc: "QRadioTunerControl_frequency".}
proc fcQRadioTunerControl_frequencyStep(self: pointer, b: cint): cint {.importc: "QRadioTunerControl_frequencyStep".}
proc fcQRadioTunerControl_frequencyRange(self: pointer, b: cint): struct_miqt_map {.importc: "QRadioTunerControl_frequencyRange".}
proc fcQRadioTunerControl_setFrequency(self: pointer, frequency: cint): void {.importc: "QRadioTunerControl_setFrequency".}
proc fcQRadioTunerControl_isStereo(self: pointer, ): bool {.importc: "QRadioTunerControl_isStereo".}
proc fcQRadioTunerControl_stereoMode(self: pointer, ): cint {.importc: "QRadioTunerControl_stereoMode".}
proc fcQRadioTunerControl_setStereoMode(self: pointer, mode: cint): void {.importc: "QRadioTunerControl_setStereoMode".}
proc fcQRadioTunerControl_signalStrength(self: pointer, ): cint {.importc: "QRadioTunerControl_signalStrength".}
proc fcQRadioTunerControl_volume(self: pointer, ): cint {.importc: "QRadioTunerControl_volume".}
proc fcQRadioTunerControl_setVolume(self: pointer, volume: cint): void {.importc: "QRadioTunerControl_setVolume".}
proc fcQRadioTunerControl_isMuted(self: pointer, ): bool {.importc: "QRadioTunerControl_isMuted".}
proc fcQRadioTunerControl_setMuted(self: pointer, muted: bool): void {.importc: "QRadioTunerControl_setMuted".}
proc fcQRadioTunerControl_isSearching(self: pointer, ): bool {.importc: "QRadioTunerControl_isSearching".}
proc fcQRadioTunerControl_isAntennaConnected(self: pointer, ): bool {.importc: "QRadioTunerControl_isAntennaConnected".}
proc fcQRadioTunerControl_searchForward(self: pointer, ): void {.importc: "QRadioTunerControl_searchForward".}
proc fcQRadioTunerControl_searchBackward(self: pointer, ): void {.importc: "QRadioTunerControl_searchBackward".}
proc fcQRadioTunerControl_searchAllStations(self: pointer, searchMode: cint): void {.importc: "QRadioTunerControl_searchAllStations".}
proc fcQRadioTunerControl_cancelSearch(self: pointer, ): void {.importc: "QRadioTunerControl_cancelSearch".}
proc fcQRadioTunerControl_start(self: pointer, ): void {.importc: "QRadioTunerControl_start".}
proc fcQRadioTunerControl_stop(self: pointer, ): void {.importc: "QRadioTunerControl_stop".}
proc fcQRadioTunerControl_error(self: pointer, ): cint {.importc: "QRadioTunerControl_error".}
proc fcQRadioTunerControl_errorString(self: pointer, ): struct_miqt_string {.importc: "QRadioTunerControl_errorString".}
proc fcQRadioTunerControl_stateChanged(self: pointer, state: cint): void {.importc: "QRadioTunerControl_stateChanged".}
proc fcQRadioTunerControl_connect_stateChanged(self: pointer, slot: int, callback: proc (slot: int, state: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_stateChanged".}
proc fcQRadioTunerControl_bandChanged(self: pointer, band: cint): void {.importc: "QRadioTunerControl_bandChanged".}
proc fcQRadioTunerControl_connect_bandChanged(self: pointer, slot: int, callback: proc (slot: int, band: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_bandChanged".}
proc fcQRadioTunerControl_frequencyChanged(self: pointer, frequency: cint): void {.importc: "QRadioTunerControl_frequencyChanged".}
proc fcQRadioTunerControl_connect_frequencyChanged(self: pointer, slot: int, callback: proc (slot: int, frequency: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_frequencyChanged".}
proc fcQRadioTunerControl_stereoStatusChanged(self: pointer, stereo: bool): void {.importc: "QRadioTunerControl_stereoStatusChanged".}
proc fcQRadioTunerControl_connect_stereoStatusChanged(self: pointer, slot: int, callback: proc (slot: int, stereo: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_stereoStatusChanged".}
proc fcQRadioTunerControl_searchingChanged(self: pointer, searching: bool): void {.importc: "QRadioTunerControl_searchingChanged".}
proc fcQRadioTunerControl_connect_searchingChanged(self: pointer, slot: int, callback: proc (slot: int, searching: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_searchingChanged".}
proc fcQRadioTunerControl_signalStrengthChanged(self: pointer, signalStrength: cint): void {.importc: "QRadioTunerControl_signalStrengthChanged".}
proc fcQRadioTunerControl_connect_signalStrengthChanged(self: pointer, slot: int, callback: proc (slot: int, signalStrength: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_signalStrengthChanged".}
proc fcQRadioTunerControl_volumeChanged(self: pointer, volume: cint): void {.importc: "QRadioTunerControl_volumeChanged".}
proc fcQRadioTunerControl_connect_volumeChanged(self: pointer, slot: int, callback: proc (slot: int, volume: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_volumeChanged".}
proc fcQRadioTunerControl_mutedChanged(self: pointer, muted: bool): void {.importc: "QRadioTunerControl_mutedChanged".}
proc fcQRadioTunerControl_connect_mutedChanged(self: pointer, slot: int, callback: proc (slot: int, muted: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_mutedChanged".}
proc fcQRadioTunerControl_errorWithErr(self: pointer, err: cint): void {.importc: "QRadioTunerControl_errorWithErr".}
proc fcQRadioTunerControl_connect_errorWithErr(self: pointer, slot: int, callback: proc (slot: int, err: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_errorWithErr".}
proc fcQRadioTunerControl_stationFound(self: pointer, frequency: cint, stationId: struct_miqt_string): void {.importc: "QRadioTunerControl_stationFound".}
proc fcQRadioTunerControl_connect_stationFound(self: pointer, slot: int, callback: proc (slot: int, frequency: cint, stationId: struct_miqt_string) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_stationFound".}
proc fcQRadioTunerControl_antennaConnectedChanged(self: pointer, connectionStatus: bool): void {.importc: "QRadioTunerControl_antennaConnectedChanged".}
proc fcQRadioTunerControl_connect_antennaConnectedChanged(self: pointer, slot: int, callback: proc (slot: int, connectionStatus: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QRadioTunerControl_connect_antennaConnectedChanged".}
proc fcQRadioTunerControl_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTunerControl_tr2".}
proc fcQRadioTunerControl_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTunerControl_tr3".}
proc fcQRadioTunerControl_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTunerControl_trUtf82".}
proc fcQRadioTunerControl_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTunerControl_trUtf83".}
proc fcQRadioTunerControl_protectedbase_sender(self: pointer, ): pointer {.importc: "QRadioTunerControl_protectedbase_sender".}
proc fcQRadioTunerControl_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QRadioTunerControl_protectedbase_senderSignalIndex".}
proc fcQRadioTunerControl_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QRadioTunerControl_protectedbase_receivers".}
proc fcQRadioTunerControl_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QRadioTunerControl_protectedbase_isSignalConnected".}
proc fcQRadioTunerControl_staticMetaObject(): pointer {.importc: "QRadioTunerControl_staticMetaObject".}
proc fcQRadioTunerControl_delete(self: pointer) {.importc: "QRadioTunerControl_delete".}

proc metaObject*(self: gen_qradiotunercontrol_types.QRadioTunerControl, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQRadioTunerControl_metaObject(self.h))

proc metacast*(self: gen_qradiotunercontrol_types.QRadioTunerControl, param1: cstring): pointer =
  fcQRadioTunerControl_metacast(self.h, param1)

proc metacall*(self: gen_qradiotunercontrol_types.QRadioTunerControl, param1: cint, param2: cint, param3: pointer): cint =
  fcQRadioTunerControl_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qradiotunercontrol_types.QRadioTunerControl, s: cstring): string =
  let v_ms = fcQRadioTunerControl_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qradiotunercontrol_types.QRadioTunerControl, s: cstring): string =
  let v_ms = fcQRadioTunerControl_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc state*(self: gen_qradiotunercontrol_types.QRadioTunerControl, ): cint =
  cint(fcQRadioTunerControl_state(self.h))

proc band*(self: gen_qradiotunercontrol_types.QRadioTunerControl, ): cint =
  cint(fcQRadioTunerControl_band(self.h))

proc setBand*(self: gen_qradiotunercontrol_types.QRadioTunerControl, b: cint): void =
  fcQRadioTunerControl_setBand(self.h, cint(b))

proc isBandSupported*(self: gen_qradiotunercontrol_types.QRadioTunerControl, b: cint): bool =
  fcQRadioTunerControl_isBandSupported(self.h, cint(b))

proc frequency*(self: gen_qradiotunercontrol_types.QRadioTunerControl, ): cint =
  fcQRadioTunerControl_frequency(self.h)

proc frequencyStep*(self: gen_qradiotunercontrol_types.QRadioTunerControl, b: cint): cint =
  fcQRadioTunerControl_frequencyStep(self.h, cint(b))
